<resources>
    <string name="app_name">Box2HomeClient</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log in</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié?</string>
    <string name="mot_de_passe_oublie_">Mot de passe oublié</string>
    <string name="votre_course">Votre course</string>
    <string name="prompt_nom">Nom</string>
    <string name="prompt_prenom">Prénom</string>
    <string name="prompt_tel">Tél.</string>
    <string name="action_rejoigner">Rejoignez-nous</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_fcb">Se connecter avec Facebook</string>
    <string name="action_change_pwd">Réinitialiser mon mot de passe</string>
    <string name="action_sign_up">Inscription</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Cette adresse e-mail n\'est pas valide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_invalid_same_pwd">Mots de passes non identiques</string>
    <string name="error_invalid_tel">Numéro de téléphone invalide</string>
    <string name="error_invalid_nom">le nom ne doit pas commencer par un numéro</string>
    <string name="error_invalid_prenom">le prénom ne doit pas commencer par un numéro</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est obligatoire.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profi">Profil</string>
    <string name="title_course">Adresse de départ</string>
    <string name="title_historique">Historique</string>
    <string name="title_qui_sommes_nous">Qui sommes-nous</string>
    <string name="nouveau_pwd">Nouveau mot de passe</string>
    <string name="confirm_pwd">Confirmer mot de passe</string>

    <string name="error_happen">Quelque chose ne va pas, veuillez réessayer plus tard  </string>
    <string name="hint_adreese">Entrer une adresse , un code postal...</string>
    <string name="authontiation">Échec d\'authentification: login ou mot de passe incorrect</string>
    <string name="servererror">Erreur de serveur</string>
    <string name="choisir_vehicule">Choisissez le véhicule</string>
    <string name="type_vehicule_">Type de véhicule : </string>
    <string name="type_vehicule">Avez-vous besoin d\'un véhicule avec hayon ?</string>
    <string name="commanderici">Commander ici</string>
    <string name="networkerror">Erreur réseau se produire</string>
    <string name="request_success">Demande envoyée</string>
    <string name="decription">Veuillez remplir tous les champs de description</string>
    <string name="serviceerror">Please at least choose one service  </string>
    <string name="timeouterror"> Sending tie take than  useual</string>
    <string name="snackbarText"> Sélectionnez le point de départ...</string>
    <string name="usernameandpassword">Login ou mot de passe incorrect</string>
    <string name="success_signup">Votre compte a été créé avec succès. /n
    Vous pouvez désormais vous connecter à Box 2 Home.</string>
    <string name="forgot_pwd">Veuillez saisir votre adresse e-mail.
    Vous allez recevoir un lien pour réinitialiser votre mot de passe.</string>
    <string name="txt_qui_somme_nous"><![CDATA[<p style="text-align:justify;"><b>Box 2 Home</b> est une plateforme de mise en relation entre chauffeurs livreurs et particuliers ou professionnels.<br/> Vous pouvez commander depuis notre application
    ou notre site web un transporteur afin d\'envoyer en quelques clics, n\'importe quel objet d\'un point A à un point B.<br/>
    Plus d\'attente interminable, de démarche administrative contraignante ou de prix abusifs ! nous venons récupérer
    votre objet et nous vous le livrons de suite.<p>]]></string>

    <string name="disconnectMsg">Êtes-vous sûr de vouloir vous déconnecter de l\'application ?</string>

    <string name="facebook_app_id">138299523483404</string>
</resources>
