<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.macbook.box2homeclient.InscriptionActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="26dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" "
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray">

            <com.example.macbook.box2homeclient.custom.CustomEditText
                android:id="@+id/edt_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nom"
                android:inputType="text"
                android:drawableLeft="@mipmap/user"
                android:drawablePadding="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/darker_gray"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" "
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray">

            <com.example.macbook.box2homeclient.custom.CustomEditText
                android:id="@+id/edt_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_prenom"
                android:inputType="text"
                android:drawableLeft="@mipmap/user"
                android:drawablePadding="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" "
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray">

            <com.example.macbook.box2homeclient.custom.CustomEditText
                android:id="@+id/edt_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_tel"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="phone"
                android:drawableLeft="@mipmap/phone"
                android:drawablePadding="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:hint=" "
            android:textColorHint="@android:color/darker_gray">

            <com.example.macbook.box2homeclient.custom.CustomEditText
                android:id="@+id/edt_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@mipmap/arroba"
                android:drawablePadding="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" "
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray">

            <com.example.macbook.box2homeclient.custom.CustomEditText
                android:id="@+id/edt_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textPassword"
                android:drawableLeft="@mipmap/locked"
                android:drawablePadding="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" "
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray">

            <com.example.macbook.box2homeclient.custom.CustomButton
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/line1"
                android:layout_marginTop="36dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_button_shape"
                android:text="@string/action_rejoigner"
                android:textColor="@android:color/white" />

            <com.example.macbook.box2homeclient.custom.CustomEditText
                android:id="@+id/edt_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_pwd"
                android:inputType="textPassword"
                android:drawableLeft="@mipmap/locked"
                android:drawablePadding="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

</RelativeLayout>
</ScrollView>
</RelativeLayout>
